landing page cards

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -120,4 +120,9 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.noise-bg {
+  background-image: url('@/assets/images/noise.svg');
+  background: aquamarine;
 }
