--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -58,7 +58,7 @@
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(0.985 0 0);
+  --destructive-foreground: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.646 0.222 41.116);
@@ -93,8 +93,8 @@
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.396 0.141 25.723);
-  --destructive-foreground: oklch(0.637 0.237 25.331);
+  --destructive: oklch(0.577 0.245 27.325);
+  --destructive-foreground: oklch(0.577 0.245 27.325);
   --border: oklch(0.269 0 0);
   --input: oklch(0.269 0 0);
   --ring: oklch(0.769 0.188 70.08);
@@ -121,8 +121,7 @@
     @apply bg-background text-foreground;
   }
 }
-
-.noise-bg {
-  background-image: url('@/assets/images/noise.svg');
-  background: aquamarine;
+header,
+footer {
+  padding: 1rem;
 }
