fixes: fe enhancements

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -121,7 +121,12 @@
     @apply bg-background text-foreground;
   }
 }
+
 header,
 footer {
   padding: 1rem;
+}
+
+form {
+  @apply rounded-2xl bg-orange-100 p-6;
 }
