--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -48,7 +48,7 @@
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
+  --popover-foreground: oklch(0.646 0.222 41.116);
   --primary: oklch(0.646 0.222 41.116);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
@@ -128,5 +128,5 @@ footer {
 }
 
 form {
-  @apply rounded-2xl bg-orange-100 p-6;
+  @apply rounded-2xl bg-orange-100 p-6 shadow-md;
 }
